--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -81,7 +81,7 @@
     <div class="navbar-right">
     <form class="Search" action="" method="GET" role="search">
     <div >
-      <a class="" href="/search">  <i style="font-size: 20px; margin-left: 340px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
+      <a class="justify-content-end" href="/search">  <i style="font-size: 20px; margin-left: 340px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
     </div>
 
     </form>
