--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -78,15 +78,28 @@
     <li class="justify-content-end"><a href="/contact">Əlaqə</a></li>
     </ul>
     </nav>
-    <div class="navbar-right">
+    <!-- <div class="navbar-right">
     <form class="" action="" >
     <div >
       <a class="justify-content-end" href="/search">  <i style="font-size: 20px; margin-left: 340px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
     </div>
 
     </form>
-    </div>
-    </div>
+    </div> -->
+    
+  
+    <nav class="navbar navbar-light bg-light justify-content-between">
+      <a class="navbar-brand">Navbar</a>
+      <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </nav>
+
+
+  
+  </div>
+
 
     <div id="mobile-body-overly"></div></div>
     </header>
