--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -90,7 +90,8 @@
   
     <nav class="navbar navbar-light bg-light justify-content-between">
       <form class="form-inline">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <a class="" href="/search">  <i style="" class="fa-solid fa-magnifying-glass"></i> </a>
+        <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
       </form>
     </nav>
 
