--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -80,16 +80,24 @@
     </nav>
     <div class="navbar-right">
     <form class="Search" action="" method="GET" role="search">
-    <input type="text" class="form-control Search-box" name="q" id="Search-box" placeholder="Search" value="">
+    <input style="display: none;" type="text" class="form-control Search-box" name="q" id="Search-box" placeholder="Search" value="">
     <label for="Search-box" class="Search-box-label">
       <a href="/search">  <i style="font-size: 20px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
     </label>
-    <span class="Search-close">
-        <i style="font-size: 20px; margin-top: 7px;" class="fa-solid fa-circle-xmark"></i>
-    </span>
+
     </form>
     </div>
     </div>
 
     <div id="mobile-body-overly"></div></div>
     </header>
+
+
+
+
+
+    <!-- <nav class="navbar navbar-light bg-light justify-content-end">
+      <form class="form-inline">
+        <a class="" href="/search">  <i style="" class="fa-solid fa-magnifying-glass"></i> </a>
+      </form>
+    </nav> -->
