--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -39,7 +39,7 @@
 </div>
 <div class="top-post-details">
 <ul class="tags">
-<li><a href="#">Food Habit</a></li>
+<li><a href="#">2 dəqiqəlik</a></li>
 </ul>
 <a href="{{i.get_absolute_url}}">
 <h3>{{i.title|truncatechars:40}}</h3>
@@ -72,7 +72,7 @@
     </div>
     <div class="top-post-details">
     <ul class="tags">
-    <li><a href="#">Food Habit</a></li>
+    <li><a href="#">2 dəqiqəlik</a></li>
     </ul>
     <a href="{{i.get_absolute_url}}">
     <h4>{{ i.title|truncatechars:35 }} </h4>
@@ -98,7 +98,7 @@
 </div>
 <div class="top-post-details">
 <ul class="tags">
-<li><a href="#">Food Habit</a></li>
+<li><a href="#">2 dəqiqəlik</a></li>
 </ul>
 <a href="{{i.get_absolute_url}}">
 <h4>{{ i.title|truncatechars:35 }} </h4>
@@ -208,7 +208,7 @@
 </div>
 <div class="details">
 <ul class="tags">
-<li><a href="#">Food Habit</a></li>
+<li><a href="#">2 dəqiqəlik</a></li>
 </ul>
 <a href="{{item.get_absolute_url}}">
 <h3>{{ item.title }}</h3>
