--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -157,7 +157,7 @@
 <img class="img-fluid" src="{{i.image.url}}" alt="" data-pagespeed-url-hash="2585403232" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <ul class="tags">
-<li><a href="#">Lifestyle</a></li>
+<li><a href="#">2 dəqiqəlik</a></li>
 </ul>
 </div>
 <div class="col-lg-7 post-right">
