--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -69,9 +69,9 @@
     <ul style="display: none;">
     <li><a href="#">Iş elanları</a></li>
     <li><a href="#">CV yarat</a></li>
-    <li><a href="#">Gallery Post</a></li>
+    <!-- <li><a href="#">Gallery Post</a></li>
     <li><a href="#">Video Post</a></li>
-    <li><a href="#">Audio Post</a></li>
+    <li><a href="#">Audio Post</a></li> -->
     </ul>
     </li>
     <li><a href="#">Haqqımızda</a></li>
