--- a/contact/templates/author.html
+++ b/contact/templates/author.html
@@ -11,6 +11,12 @@
 
 
     <input name="name" placeholder="Enter your name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
+    <input name="name" placeholder="Enter your name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
+    <input name="name" placeholder="Enter your name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
+    <input name="name" placeholder="Enter your name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
+    <input name="name" placeholder="Enter your name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
+    <input name="name" placeholder="Enter your name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
+    <input name="name" placeholder="Enter your name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
 
 
 
