--- a/contact/templates/author.html
+++ b/contact/templates/author.html
@@ -10,12 +10,19 @@
 {% block content %}
 
 
-    <input name="name" placeholder="Enter your name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
-    <input name="name" placeholder="Enter your name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
-    <input name="name" placeholder="Enter your name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
-    <input name="name" placeholder="Enter your name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
-    <input name="name" placeholder="Enter your name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
-    <input name="name" placeholder="Enter your name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
+    <input name="name" placeholder="Ad ve Soyad" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
+    <input name="name" placeholder="E-Mail adres" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
+    <input name="name" placeholder="Telefon" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
+
+    <select class="custom-select" id="inputGroupSelect01">
+        <option selected>Choose...</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+    
+    <input name="name" placeholder="Təhsil və sənayə təcrübəniz'" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
+    <input name="name" placeholder="Hansı mövzuda yaza bilərsiniz?" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
     <input name="name" placeholder="Enter your name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
 
 
