--- a/contact/templates/author.html
+++ b/contact/templates/author.html
@@ -10,9 +10,9 @@
 {% block content %}
 
 
-    <input name="name" placeholder="Ad ve Soyad" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
-    <input name="name" placeholder="E-Mail adres" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
-    <input name="name" placeholder="Telefon" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
+    <input name="name" placeholder="Ad ve Soyad" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Ad ve Soyad&#39;" class="common-input mb-20 form-control" required="" type="text">
+    <input name="name" placeholder="E-Mail adres" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;E-Mail adres&#39;" class="common-input mb-20 form-control" required="" type="text">
+    <input name="name" placeholder="Telefon" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Telefon&#39;" class="common-input mb-20 form-control" required="" type="text">
 
     <select class="custom-select" id="inputGroupSelect01">
         <option selected>Iş vəiyyətiniz</option>
@@ -20,9 +20,10 @@
         <option value="2">Tələbəyəm</option>
         <option value="3">Işləmirəm</option>
       </select>
+      <hr>
     
-    <input name="name" placeholder="Təhsil və sənayə təcrübəniz'" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
-    <input name="name" placeholder="Hansı mövzuda yaza bilərsiniz?" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
+    <input name="name" placeholder="Təhsil və sənayə təcrübəniz'" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Təhsil və sənayə təcrübəniz&#39;" class="common-input mb-20 form-control" required="" type="text">
+    <input name="name" placeholder="Hansı mövzuda yaza bilərsiniz?" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Hansı mövzuda yaza bilərsiniz?&#39;" class="common-input mb-20 form-control" required="" type="text">
 
 
     <select class="custom-select" id="inputGroupSelect01">
@@ -32,5 +33,6 @@
         <option value="3">Ayda 1-2 məqalə</option>
       </select>
 
+      <hr>
 
 {% endblock %}
