--- a/contact/templates/author.html
+++ b/contact/templates/author.html
@@ -13,13 +13,19 @@
 <div class="container">
     <form class="form-area contact-form text-right"  action="" method="POST">
 
+        {% csrf_token %}
+
 
     <h1 style="text-align: center; margin-top: 5px;">Yazarımız ol!</h1>
+        {{ form.name_surname }}
+    <!-- <input style="margin-top: 15px;" name="name" placeholder="Ad ve Soyad" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Ad ve Soyad&#39;" class="common-input mb-20 form-control" required="" type="text"> -->
 
-    <input style="margin-top: 15px;" name="name" placeholder="Ad ve Soyad" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Ad ve Soyad&#39;" class="common-input mb-20 form-control" required="" type="text">
+    {{ form.mail }}
+    <!-- <input name="name" placeholder="E-Mail adres" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;E-Mail adres&#39;" class="common-input mb-20 form-control" required="" type="text"> -->
 
-    <input name="name" placeholder="E-Mail adres" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;E-Mail adres&#39;" class="common-input mb-20 form-control" required="" type="text">
-    <input name="name" placeholder="Telefon" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Telefon&#39;" class="common-input mb-20 form-control" required="" type="text">
+
+    {{ form.phono }}
+    <!-- <input name="name" placeholder="Telefon" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Telefon&#39;" class="common-input mb-20 form-control" required="" type="text"> -->
 
     <select style="margin-bottom: 15px;" class="custom-select" id="inputGroupSelect01">
         <option selected>Iş vəiyyətiniz</option>
@@ -29,8 +35,12 @@
       </select>
       
     
-    <input name="name" placeholder="Təhsil və sənayə təcrübəniz'" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Təhsil və sənayə təcrübəniz&#39;" class="common-input mb-20 form-control" required="" type="text">
-    <input name="name" placeholder="Hansı mövzuda yaza bilərsiniz?" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Hansı mövzuda yaza bilərsiniz?&#39;" class="common-input mb-20 form-control" required="" type="text">
+      {{ form.education_industry_experience }}
+    <!-- <input name="name" placeholder="Təhsil və sənayə təcrübəniz'" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Təhsil və sənayə təcrübəniz&#39;" class="common-input mb-20 form-control" required="" type="text"> -->
+
+
+    {{ form.subjects }}
+    <!-- <input name="name" placeholder="Hansı mövzuda yaza bilərsiniz?" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Hansı mövzuda yaza bilərsiniz?&#39;" class="common-input mb-20 form-control" required="" type="text"> -->
 
 
     <select style="margin-bottom: 15px;" class="custom-select" id="inputGroupSelect01">
